fix(filter-panel-accordion-item): use outline and transparent border to prevent hover + focus overlap

--- a/src/components/FilterPanel/FilterPanelAccordionItem/_mixins.scss
+++ b/src/components/FilterPanel/FilterPanelAccordionItem/_mixins.scss
@@ -44,12 +44,20 @@
       padding-top: $filter-panel-accordion-item__content__spacing__padding;
       padding-bottom: $filter-panel-accordion-item__content__spacing__padding;
       color: $text-02;
+      border: 2px solid transparent;
 
       // Increase outline spacing horizontally so that it does not overlap with the count on the
       // accordion heading label.
       &::before {
         left: -$carbon--spacing-01;
         width: calc(100% + #{$carbon--spacing-03});
+      }
+
+      &:focus::before {
+        // Override Carbon `Accordion` defaults:
+        border: none;
+        outline: 2px solid $focus;
+        outline-offset: -2px;
       }
     }
 
